--- a/watchu_db/watchu_db/templates/test_room/make.html
+++ b/watchu_db/watchu_db/templates/test_room/make.html
@@ -1,48 +1,54 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div>
-    <div class="container mt-5 ml-5" style="width: 500px;">
-        <h3 class="border-bottom py-2">차단 프로그램 등록</h3>
-        <!-- 차단 프로그램 입력하는 곳-->
-        <form action="" onsubmit="return addProgram();">
-            <input type="text" class="form-control addProgramValue" placeholder="프로그램이름.exe">
-        </form>
-    </div>
-    <!-- 차단 프로그램 리스트-->
-    <div class="container mt-5 ml-5" style="width: 500px;">
-        <h3 class="border-bottom py-2">차단 프로그램 리스트</h3>
-        <ul class="list-group ProgramList" id="plist"></ul>
-    </div>
+<h2 class="border-bottom px-3 py-3">시험 번호 : {{ test_room_id }}</h2>
+
+<div class="container mt-5 ml-5 float-left" style="width: 500px;">
+    <h3 class="border-bottom py-2">시험 시간 설정</h3>
+    <form>
+        <input type="date" id="dateForm">
+        <input type="time" id="starttimeForm">
+        ~
+        <input type="time" id="endtimeForm">
+    </form>
 </div>
 
-<!-- 학생 사진 등록 -->
-<div>
-<div class="container mt-5 ml-5" style="width: 500px;">
+<div class="container mt-5 ml-5 float-left" style="width: 500px;">
+    <h3 class="border-bottom py-2">차단 프로그램 등록</h3>
+    <form action="" onsubmit="return addProgram();">
+        <input type="text" class="form-control addProgramValue" placeholder="프로그램이름.exe">
+    </form>
+    <h3 class="border-bottom py-2 mt-5">차단 프로그램 리스트</h3>
+    <ul class="list-group ProgramList" id="plist"></ul>
+</div>
+
+
+<div class="container mt-5 ml-5 float-left" style="width: 500px;">
     <h3 class="border-bottom py-2">학생 등록</h3>
-    <form method="POST" enctype="multipart/form-data" action="{{ url_for('test_room.upload_image') }}">
+    <form enctype="multipart/form-data">
         <ul class="list-group mb-3">
             <li class="list-group-item">학생 사진을 등록하십시오.</li>
             <li class="list-group-item">파일 이름을 학번으로 설정하십시오.</li>
         </ul>
-        <!-- 학생 사진 브라우즈 -->
         <div class="custom-file">
             <input type="file" class="custom-file-input" id="input_images" name="images[]" multiple>
             <label class="custom-file-label" data-browse="Browse">Upload one or more files</label>
         </div>
     </form>
-</div>
-<!-- 학생 사진 리스트-->
-<div class="container mt-5 ml-5" style="width: 500px;">
-    <h3 class="border-bottom py-2">학생 사진 리스트</h3>
+    <h3 class="border-bottom py-2 mt-5">학생 사진 리스트</h3>
     <div id="image_list"></div>
 </div>
-</div>
-<button class="btn btn-primary btn-lg" id="makeTestRoomBtn">시험 생성</button>
 
+<button class="btn btn-primary btn-lg" id="makeTestRoomBtn" style="position: fixed; bottom: 5%; right: 2%;">시험 생성</button>
 
 <!-- script -->
 <script>    
+    // 시험 시간 설정
+    let today = new Date().toISOString();
+    let dateForm = document.getElementById('dateForm');
+    dateForm.value = today.slice(0, 10);
+    dateForm.min = today.slice(0, 10);
+
     // 블락 리스트에 추가
     let i = 0;
     let program_list = []; // 프로그램 리스트 저장
@@ -128,61 +134,53 @@
         this.parentNode.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode.parentNode);
     }
 
-   // 시험 생성 버튼 클릭 -> ajax로 데이터 전송
-   $('#makeTestRoomBtn').click( function () {     
-       // Promise 객체로 동기 처리
-       new Promise((reserve) => {
-            let student_list = [];
-            let image_list = [];
-            // 이미지를 base64방식으로 인코딩하는 과정을 거친다. 
-            for (let i = 0; i < imageBuffer.length; i++) {
-                let reader = new FileReader();
-                reader.onload = () => { 
-                    student_list[i] = imageBuffer[i].name.substring(0, 8);
-                    image_list[i] = reader.result;
-                    // 마지막 이미지일 경우 student_list와 image_list를 넘겨준다.
-                    if (i === imageBuffer.length - 1) {
-                        reserve([student_list, image_list]);
-                    }
-                };
-                reader.onerror = (error) => {
-                    console.log(error);
-                }
-                reader.readAsDataURL(imageBuffer[i]);
+    // 시험 생성 버튼 클릭 -> ajax로 데이터 전송
+    $('#makeTestRoomBtn').click( function () {     
+    //    let con = confirm("시험을 생성하시겠습니까?");
+    //    if (con == true) {
 
+        // 차단 프로그램 리스트 스트링으로 변환
+        let block_list = "";
+        for (let i = 0; i < program_list.length; i++) {
+                block_list += program_list[i] +";"
+        }
+        
+        let date = document.getElementById('dateForm').value;
+        let start_time = document.getElementById('starttimeForm').value;
+        let end_time = document.getElementById('endtimeForm').value;
 
-            }  
-        }).then((result) => {
-            let student_list = result[0]; 
-            let image_list = result[1];
-            console.log(student_list.length);
-            console.log(student_list);
-            console.log(image_list.length);
-            console.log(image_list);
-
-            let postdata = {
-                'block_list': program_list,
-                'student_list': student_list,
-                'image_list': image_list
-            };
-
-            $.ajax({
-                url: '{{ url_for("test_room.ajax") }}',
-                type: 'POST',
-                contentType: false,
-                processData: false,
-                dataType: 'text',
-                data: JSON.stringify(postdata),
-                success: function(response) {
-                    console.log("ajax 통신 성공!" + response);
-                },
-                error: function(request, status, error) {
-                    console.log("ajax 통신 실패!");
-                    console.log(status);
-                    console.log(error);
-                }
-            });
+        let formdata = new FormData();
+        formdata.append('test_room_id', '{{ test_room_id }}');
+        formdata.append('professor_id', '{{ g.user.id }}');
+        formdata.append('block_list', block_list);
+        formdata.append('date', date);
+        formdata.append('start_time', start_time);
+        formdata.append('end_time', end_time);
+        formdata.append('length', imageBuffer.length);
+        for (let i = 0; i < imageBuffer.length; i++) {
+            formdata.append(i, imageBuffer[i]);
+        }
+            
+        $.ajax({
+            url: '{{ url_for("test_room.ajax") }}',
+            type: 'POST',
+            contentType: false,
+            processData: false,
+            data: formdata,
+            success: function(response) {
+                console.log("ajax 통신 성공!" + response);
+            },
+            error: function(request, status, error) {
+                console.log("ajax 통신 실패!");
+                console.log(status);
+                console.log(error);
+            }
         });
+
+        // 메뉴 페이지로 이동
+        location.href="{{ url_for('test_room.menu') }}";
+        // alert("시헙이 생성되었습니다!!");
+       
    });
 
 </script>
